add showing related shoes on detail page

--- a/mainapp/templates/mainapp/layout/main_frame.html
+++ b/mainapp/templates/mainapp/layout/main_frame.html
@@ -32,7 +32,7 @@
         <div class="well well-small"><a href="#"><img src="{% static 'mainapp/assets/img/paypal.jpg' %}"
                                                       alt="payment method paypal"></a></div>
 
-        <a class="shopBtn btn-block" href="#">Sản phẩm sắp ra mắt <br><small>Xem ngay</small></a>
+        <a class="shopBtn btn-block" href="{% url 'news:news_url' %}">Sản phẩm sắp ra mắt <br><small>Xem ngay</small></a>
         <br>
         <br>
         <ul class="nav nav-list promowrapper">
