--- a/mainapp/templates/mainapp/product_details.html
+++ b/mainapp/templates/mainapp/product_details.html
@@ -90,6 +90,19 @@
                         <p>Nowadays the lingerie industry is one of the most successful business spheres.
                             Nowadays the lingerie industry is one of ...
                         </p>
+                        <br/>
+                        <div style="font-size: medium">
+                            <a href="{% url 'favourite:like_unlike_url' shoe_id=shoe.id %}?next={{ request.path }}"
+                               style="color: red">
+                                {% if is_favourite %}
+                                    <span class="icon-heart" style="font-size: larger"></span>
+                                {% endif %}
+                                {% if is_favourite == False %}
+                                    <span class="icon-heart-empty" style="font-size: larger"></span>
+                                {% endif %}
+                            </a> <span> {{ shoe.favouriteCount }} </span><span> người thích</span>
+                        </div>
+                        <br/>
                         <button type="submit" class="shopBtn" formmethod="post"><span
                                 class=" icon-shopping-cart"></span> Thêm vào giỏ hàng
                         </button>
@@ -295,7 +308,6 @@
                     <hr class="soften"/>
                 </div>
                 <div class="tab-pane fade" id="cat2">
-
                     <div class="row-fluid">
                         <div class="span2">
                             <img src="assets/img/d.jpg" alt="">
