--- a/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
+++ b/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
@@ -67,11 +67,12 @@
                        href="{% url 'account:register_url' %}"><span class="icon-edit"></span> Đăng ký </a>
                 {% endif %}
                 <a href="{% url 'contact_us:contact_url' %}"><span class="icon-envelope"></span> Liên hệ</a>
-                <a href="{% url 'cart:cart_url' %}"><span class="icon-shopping-cart"></span> {{ items_on_cart }} Item(s) - <span
-                        class="badge badge-warning"> {{ total_products_price }} <sup>đ</sup></span></a>
+                <a href="{% url 'cart:cart_url' %}"><span class="icon-shopping-cart"></span> {{ items_on_cart }} Item(s)
+                    - <span
+                            class="badge badge-warning"> {{ total_products_price }} <sup>đ</sup></span></a>
                 {% if user.is_authenticated %}
                     <a href="{% url 'account:logout_url' %}"><span class="icon-remove-circle"></span> Đăng xuất</a>
-{#                    <a href="{% url 'account:logout_url' %}"><span class="icon-heart"></span> Đăng xuất</a>#}
+                    {#                    <a href="{% url 'account:logout_url' %}"><span class="icon-heart"></span> Đăng xuất</a>#}
                 {% endif %}
             </div>
         </div>
@@ -103,7 +104,7 @@ Lower Header Section
             </div>
             <div class="span4 alignR">
                 <p><br> <strong> Hỗ trợ (24/7) : 0900 1234 678 </strong><br><br></p>
-                <span class="btn btn-mini">[ 0 ] <span class="icon-shopping-cart"></span></span>
+                <span class="btn btn-mini">[ {{ items_on_cart }} ] <span class="icon-shopping-cart"></span></span>
                 <span class="btn btn-warning btn-mini">đ</span>
                 <span class="btn btn-mini">&pound;</span>
                 <span class="btn btn-mini">&euro;</span>
@@ -167,8 +168,8 @@ Lower Header Section
                         </ul>
                     {% endif %}
                     <div class="nav pull-right">
-                        <form action="#" class="navbar-search pull-left">
-                            <input type="text" placeholder="Tìm kiếm" class="search-query span2">
+                        <form action="{% url 'mainapp:products_url' %}" class="navbar-search pull-left">
+                            <input name="search" type="text" placeholder="Tìm kiếm" class="search-query span2">
                         </form>
                     </div>
                 </div>
