--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -2,17 +2,43 @@
 {% block body_section %}
     <div class="span9">
         <ul class="breadcrumb">
-            <li><a href="../../../mainapp/templates/mainapp/index.html">Home</a> <span class="divider">/</span></li>
-            <li class="active">Page Title</li>
+            <li><a href="{% url 'mainapp:index' %}">Trang chủ</a> <span class="divider">/</span></li>
+            <li class="active">Tin tức</li>
         </ul>
         <div class="well well-small">
-            <h1> Title of the page</h1>
-            <h2> Title of the page</h2>
-            <h3> Title of the page</h3>
-            <h4> Title of the page</h4>
-            <h5> Title of the page</h5>
-            <h6> Title of the page</h6>
+            <h2> Việt Nam tập trung nghiên cứu, sản xuất vaccine phòng, chống COVID-19</h2><br/>
+            <h5> (Thứ tư, 29/04/2020 18:24)</h5><br/>
+            <h3> Phó Thủ tướng Vũ Đức Đam giao cho Bộ Khoa học và Công nghệ chủ trì phối hợp với Bộ Y tế, Viện Hàn lâm
+                khoa học Việt Nam và các cơ quan liên quan tổ chức nghiên cứu, sản xuất vaccine phòng, chống dịch
+                COVID-19</h3>
+
             <hr class="soft"/>
+            <p style="font-size: medium">
+                Sáng ngày 29/4, Phó Thủ tướng Chính phủ Vũ Đức Đam đã chủ trì cuộc họp cùng lãnh đạo Bộ Y tế , Bộ Khoa
+                học Công nghệ, Viện Hàn lâm Khoa học Việt Nam và một số đơn vị nghiên cứu về vấn đề tổ chức nghiên cứu,
+                sản xuất vắc xin phục vụ phòng chống dịch COVID-19.
+
+                Tại cuộc họp, báo cáo với Phó Thủ tướng, đại diện các đơn vị cho biết, ngay từ những ngày đầu có dịch
+                COVID-19, các cơ quan đã bắt tay vào nghiên cứu, phân lập, nuôi cấy virus, sản xuất được sinh phẩm xét
+                nghiệm, từng bước hoàn chỉnh phác đồ điều trị,... phục vụ có hiệu quả công tác phòng, chống dịch ở nước
+                ta thời gian qua.
+
+
+                Các đại biểu cũng thảo luận về kết quả nghiên cứu về virus, sinh phẩm xét nghiệm và hướng nghiên cứu,
+                sản xuất vaccine phòng COVID-19 trên thế giới. Việc nghiên cứu, sản xuất vắc xin là nhiệm vụ đòi hỏi sự
+                phối hợp của các đơn vị nghiên cứu khoa học ở các ngành khác nhau.
+
+                Sau khi nghe các đơn vị báo cáo và thảo luận, Phó Thủ tướng Vũ Đức Đam giao cho Bộ Khoa học và Công nghệ
+                chủ trì phối hợp với Bộ Y tế, Viện Hàn lâm khoa học Việt Nam và các cơ quan liên quan tổ chức nghiên
+                cứu, sản xuất vaccine phòng, chống dịch COVID-19
+
+                Các nhà khoa học tham dự cuộc họp cho biết đây là nhiệm vụ rất khó khăn, tuy nhiên, chúng ta đã có những
+                thành quả nghiên cứu trước đó như phân lập được virus thành công, sản xuất thành công sinh phẩm xét
+                nghiệm… do vậy, các nhà khoa học cũng bày tỏ tin tưởng dưới sự điều phối, chỉ đạo của Bộ Khoa học công
+                nghệ, thì chúng ta sẽ có những hướng nghiên cứu khả quan.
+            </p>
+            <br/>
+
             <h2>List of the text</h2>
 
             <h3>Unordered List</h3><br/>
@@ -49,14 +75,29 @@
             </ol>
             <hr class="soft"/>
             <h2>Paragraph</h2>
-            <p>
-                Sed at nunc ac neque semper fermentum. Proin diam sem, semper fermentum eleifend nec, viverra ac est.
-                Sed ultricies, lectus et vehicula imperdiet, felis tortor vehicula turpis, non fermentum enim est et
-                sapien. Nam justo mi, dignissim a euismod ut, pretium sed leo. Cum sociis natoque penatibus et magnis
-                dis parturient montes, nascetur ridiculus mus. In viverra porta est, consequat elementum metus tristique
-                a. Mauris tempus tellus a metus dapibus faucibus egestas lectus consectetur. Integer libero dolor,
-                luctus non congue vitae, tempus ut neque. Nunc eleifend lorem quis diam pharetra sagittis. Aliquam ut
-                dolor dui. Fusce dictum facilisis ipsum eu porttitor. In ultricies rhoncus tortor vitae tincidunt.
+            <p style="font-size: medium">
+                Sáng ngày 29/4, Phó Thủ tướng Chính phủ Vũ Đức Đam đã chủ trì cuộc họp cùng lãnh đạo Bộ Y tế , Bộ Khoa
+                học Công nghệ, Viện Hàn lâm Khoa học Việt Nam và một số đơn vị nghiên cứu về vấn đề tổ chức nghiên cứu,
+                sản xuất vắc xin phục vụ phòng chống dịch COVID-19.
+
+                Tại cuộc họp, báo cáo với Phó Thủ tướng, đại diện các đơn vị cho biết, ngay từ những ngày đầu có dịch
+                COVID-19, các cơ quan đã bắt tay vào nghiên cứu, phân lập, nuôi cấy virus, sản xuất được sinh phẩm xét
+                nghiệm, từng bước hoàn chỉnh phác đồ điều trị,... phục vụ có hiệu quả công tác phòng, chống dịch ở nước
+                ta thời gian qua.
+
+
+                Các đại biểu cũng thảo luận về kết quả nghiên cứu về virus, sinh phẩm xét nghiệm và hướng nghiên cứu,
+                sản xuất vaccine phòng COVID-19 trên thế giới. Việc nghiên cứu, sản xuất vắc xin là nhiệm vụ đòi hỏi sự
+                phối hợp của các đơn vị nghiên cứu khoa học ở các ngành khác nhau.
+
+                Sau khi nghe các đơn vị báo cáo và thảo luận, Phó Thủ tướng Vũ Đức Đam giao cho Bộ Khoa học và Công nghệ
+                chủ trì phối hợp với Bộ Y tế, Viện Hàn lâm khoa học Việt Nam và các cơ quan liên quan tổ chức nghiên
+                cứu, sản xuất vaccine phòng, chống dịch COVID-19
+
+                Các nhà khoa học tham dự cuộc họp cho biết đây là nhiệm vụ rất khó khăn, tuy nhiên, chúng ta đã có những
+                thành quả nghiên cứu trước đó như phân lập được virus thành công, sản xuất thành công sinh phẩm xét
+                nghiệm… do vậy, các nhà khoa học cũng bày tỏ tin tưởng dưới sự điều phối, chỉ đạo của Bộ Khoa học công
+                nghệ, thì chúng ta sẽ có những hướng nghiên cứu khả quan.
             </p>
 
             <h5>Lorem ipsum dolor sit amet</h5><br/>
